--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "express": "^4",
         "@sap/hana-client": "^2.4.177"
     },
-    "devDependencies": {
-        "sqlite3": "^5"
-    },
     "scripts": {
         "start": "npx cds run"
     },
     "cds": {
+        "build": {
+            "target": "."
+        },
+        "hana": {
+            "deploy-format": "hdbtable"
+        },
         "requires": {
             "db": {
-                "kind": "sql"
+                "kind": "hana"
             }
         }
     }
