--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-    "name": "MyHANAApp",
-    "version": "1.0.0",
-    "description": "A simple CAP project.",
-    "repository": "<Add your repository here>",
-    "license": "UNLICENSED",
-    "private": true,
-    "dependencies": {
-        "@sap/cds": "^4",
-        "express": "^4",
-        "@sap/hana-client": "^2.4.177"
+  "name": "MyHANAApp",
+  "version": "1.0.0",
+  "description": "A simple CAP project.",
+  "repository": "<Add your repository here>",
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "@sap/cds": "^4",
+    "express": "^4",
+    "@sap/hana-client": "^2.4.177"
+  },
+  "scripts": {
+    "start": "npx cds run"
+  },
+  "cds": {
+    "build": {
+      "target": "."
     },
-    "scripts": {
-        "start": "npx cds run"
+    "hana": {
+      "deploy-format": "hdbtable"
     },
-    "cds": {
-        "build": {
-            "target": "."
-        },
-        "hana": {
-            "deploy-format": "hdbtable"
-        },
-        "requires": {
-            "db": {
-                "kind": "hana"
-            }
-        }
+    "requires": {
+      "db": {
+        "kind": "hana"
+      }
     }
+  },
+  "sapux": [
+    "app/interaction_items"
+  ],
+  "devDependencies": {
+    "@sap/ux-specification": "^1.90.0"
+  }
 }
